--- a/styles/styles.module.scss
+++ b/styles/styles.module.scss
@@ -7,6 +7,8 @@ $color-white: #fff;
 $border-radius: 4px;
 
 .container {
+  margin-left: auto;
+  margin-right: auto;
   padding: 3rem;
   width: 600px;
   border-radius: $border-radius;
@@ -116,4 +118,49 @@ $border-radius: 4px;
   .showForm {
     display: block;
   }
+}
+
+.profileName {
+  font-style: italic;
+  font-size: x-large;
+  color: white;
+  margin-left: 175px;
+}
+
+.profileInfo {
+  font-weight: 450;
+  margin: 1rem;
+  color: white;
+}
+
+.profileBox {
+  border-color: #1d3557;
+  width: 50%;
+  height: 100%;
+  margin: auto;
+  margin-top: 35px;
+  border-radius: 15px;
+  background-color: #509fba;
+}
+
+.profilePage {
+  background-color: black;
+}
+
+.bodyContainer{
+  display: flex;
+}
+
+.imgContainer{
+  margin-left: 10rem;
+}
+
+.profileContainer{
+  border-color: #1d3557;
+  width: auto;
+  height: 100%;
+  margin: auto;
+  margin-top: 35px;
+  border-radius: 15px;
+  background-color: #509fba;
 }
